fix:change letter-spacing in the text

--- a/css/style.css
+++ b/css/style.css
@@ -340,7 +340,7 @@ body {
   max-width: 592px;
   font-size: 24px;
   line-height: 34px;
-  letter-spacing: 0.08px;
+  letter-spacing: 0.12px;
   color: var(--color-midnight-blue);
 }
 
